working on resolve issue ui and ux side.

--- a/Datque/Info.plist
+++ b/Datque/Info.plist
@@ -18,6 +18,7 @@
 				<string>com.googleusercontent.apps.319575500177-40da5j978a5n5am9h5bu11el3ogu8rk8</string>
 			</array>
 		</dict>
+		<dict/>
 	</array>
 	<key>FIREBASE_ANALYTICS_COLLECTION_ENABLED</key>
 	<true/>
