--- a/Datque/Datque.entitlements
+++ b/Datque/Datque.entitlements
@@ -9,8 +9,6 @@
 		<string>webcredentials:example.com</string>
 	</array>
 	<key>com.apple.developer.in-app-payments</key>
-	<array>
-		<string>merchant.com.zeroit.Datque</string>
-	</array>
+	<array/>
 </dict>
 </plist>
